# MachineInstructionsSimulator

./: .travis.yml  CMakeLists.txt  Makefile  README  README.md
includes/: Command.h  Executor.h  Instruction.h  PredicateParameterSize.h  PredicateVarAdapt.h  RestrictedExecutor.h  Scope.h  Token.h  TokenInst.h  TokenLabel.h  TokenVarDecl.h  TokenVarTypeDecl.h  TokenVariable.h  Tokenizer.h  VirtualMachine.h  tokens  types
includes/mis/: AsyncExecutor.h  Executor.h  Instruction.h  Parser.h  UnitBuilderRestriction.cpp  UnitBuilderRestriction.h  VirtualMachine.h  default_instructions.h  lang.h  restriction.h  strutil.h  syntax_exception.cpp  syntax_exception.h  test.hpp
includes/mis-client/: MISClient.cpp  MISClient.h
includes/mis-core/: Executor.h  VirtualMachine.h  bit.h  lang.h  log.h  mis_exception.h  parser.h  restriction.h  strutil.h
includes/mis-instructions/: default_instructions.h  instructions.h
includes/mis-server/: MISServer.cpp  MISServer.h
socket/: CMakeLists.txt  README  TCPServerSocket.cpp  TCPSocket.cpp
src/: Command.cpp  Executor.cpp  Instruction.cpp  PredicateParameterSize.cpp  PredicateVarAdapt.cpp  RestrictedExecutor.cpp  Scope.cpp  Token.cpp  Tokenizer.cpp  VirtualMachine.cpp  main.cpp  strutil.hpp
src/mis/: Executor.cpp  Parser.cpp  VirtualMachine.cpp  instructions.cpp  lang.cpp  main.cpp  restriction.cpp  strutil.cpp
src/mis-client/: ClientBoost.cpp  MISClient.cpp  main.cpp
src/mis-core/: Executor.cpp  VirtualMachine.cpp  bit.cpp  lang.cpp  log.cpp  mis_exception.cpp  parser.cpp  restriction.cpp  strutil.cpp
src/mis-instructions/: WorkAssign.cpp  WorkDeclVar.cpp  WorkJump.cpp  WorkMath.cpp  WorkMultiThread.cpp  WorkOut.cpp  WorkString.cpp  instruction_impl.cpp
src/mis-server/: MISServer.cpp  ServerBoost.cpp
